--- a/vc7_1/Torrentaid.vcproj
+++ b/vc7_1/Torrentaid.vcproj
@@ -133,8 +133,8 @@
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
 				EntryPointSymbol="wWinMainCRTStartup"
-				MergeSections=".rdata=.text"
-				TargetMachine="1"/>
+				SetChecksum="TRUE"
+				MergeSections=""/>
 			<Tool
 				Name="VCMIDLTool"
 				PreprocessorDefinitions="NDEBUG"
