Conformed resources of plug-ins; Updated skinscansks version otherwise the installer doesn't update it.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6141 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/GFLImageServices/GFLImageServices.rc
+++ b/plugins/GFLImageServices/GFLImageServices.rc
@@ -81,10 +81,12 @@ BEGIN
     BEGIN
         BLOCK "000004b0"
         BEGIN
-            VALUE "FileDescription", "GFL Image Service plugin"
+            VALUE "Comments", "GFL Image Service Plugin"
+            VALUE "CompanyName", "Shareaza Development Team"
+            VALUE "FileDescription", "GFL Image Service Plugin"
             VALUE "FileVersion", "1, 0, 0, 7"
-            VALUE "InternalName", "GFLImageServices.dll"
-            VALUE "LegalCopyright", "Copyright © Nikolay Raspopov, 2005-2006"
+            VALUE "InternalName", "GFLImageServices"
+            VALUE "LegalCopyright", "Copyright © Nikolay Raspopov, 2005-2007."
             VALUE "OriginalFilename", "GFLImageServices.dll"
             VALUE "ProductName", "Shareaza P2P"
             VALUE "ProductVersion", "2, 3, 0, 0"
