--- a/plugins/DocumentReader/DocumentReader.rc
+++ b/plugins/DocumentReader/DocumentReader.rc
@@ -72,12 +72,12 @@ BEGIN
             VALUE "Comments", "Shareaza Document Reader Plugin"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Document Reader Plugin"
-            VALUE "FileVersion", "1.0.0.6"
+            VALUE "FileVersion", "1, 0, 0, 6"
             VALUE "InternalName", "DocumentReader"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2007. All rights reserved."
             VALUE "OriginalFilename", "DocumentReader.dll"
-            VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2.3.0.0"
+            VALUE "ProductName", "Shareaza P2P"
+            VALUE "ProductVersion", "2, 3, 0, 0"
         END
     END
     BLOCK "VarFileInfo"
