--- a/plugins/IRC/IRC.rc
+++ b/plugins/IRC/IRC.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,0,0,1
+ PRODUCTVERSION 2,3,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "Shareaza IRC Plugin"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza IRC Plugin"
-            VALUE "FileVersion", "1.0.0.1"
+            VALUE "FileVersion", "1, 0, 0, 1"
             VALUE "InternalName", "IRCPlugin"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2007. All rights reserved."
             VALUE "OriginalFilename", "IRC.dll"
-            VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2.3.0.0"
+            VALUE "ProductName", "Shareaza P2P"
+            VALUE "ProductVersion", "2, 3, 0, 0"
         END
     END
     BLOCK "VarFileInfo"
