--- a/plugins/ImageViewer/ImageViewer.rc
+++ b/plugins/ImageViewer/ImageViewer.rc
@@ -86,9 +86,9 @@ BEGIN
             VALUE "FileDescription", "Shareaza Image Viewer Plugin"
             VALUE "FileVersion", "1, 2, 1, 7"
             VALUE "InternalName", "ImageViewer"
-            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2007."
+            VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2007. All rights reserved."
             VALUE "OriginalFilename", "ImageViewer.dll"
-            VALUE "ProductName", "Shareaza"
+            VALUE "ProductName", "Shareaza P2P"
             VALUE "ProductVersion", "2, 3, 0, 0"
         END
     END
