--- a/plugins/MediaImageServices/MediaImageServices.rc
+++ b/plugins/MediaImageServices/MediaImageServices.rc
@@ -81,10 +81,11 @@ BEGIN
     BEGIN
         BLOCK "000004b0"
         BEGIN
+            VALUE "Comments", "Media Image Services Plugin"
             VALUE "CompanyName", "Shareaza Development Team"
-            VALUE "FileDescription", "Media Image Services plugin"
+            VALUE "FileDescription", "Media Image Services Plugin"
             VALUE "FileVersion", "1, 0, 0, 9"
-            VALUE "InternalName", "MediaImageServices.dll"
+            VALUE "InternalName", "MediaImageServices"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2005-2007. All rights reserved."
             VALUE "OriginalFilename", "MediaImageServices.dll"
             VALUE "ProductName", "Shareaza P2P"
