--- a/plugins/MediaLibraryBuilder/MediaLibraryBuilder.rc
+++ b/plugins/MediaLibraryBuilder/MediaLibraryBuilder.rc
@@ -81,10 +81,11 @@ BEGIN
     BEGIN
         BLOCK "000004b0"
         BEGIN
+            VALUE "Comments", "Media Library Builder Plugin"
             VALUE "CompanyName", "Shareaza Development Team"
-            VALUE "FileDescription", "Media Library Builder plugin"
+            VALUE "FileDescription", "Media Library Builder Plugin"
             VALUE "FileVersion", "1, 0, 0, 10"
-            VALUE "InternalName", "MediaLibraryBuilder.dll"
+            VALUE "InternalName", "MediaLibraryBuilder"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2005-2007. All rights reserved."
             VALUE "OriginalFilename", "MediaLibraryBuilder.dll"
             VALUE "ProductName", "Shareaza P2P"
