Fixed Skin Installer Debug build
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6142 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/skin-installer.vcproj
+++ b/vc7_1/skin-installer.vcproj
@@ -39,7 +39,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="zlibwapi.lib"
+				AdditionalDependencies="zlibwapi.lib comctl32.lib"
 				OutputFile="$(SolutionDir)$(ConfigurationName)/Skin.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
